--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BuildersApp">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".OnBoardingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
