--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -41,8 +42,11 @@ dependencies {
     // Dots Indicator For ViewPager
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:3.0.3'
 
+    // Dependency to Circle ImageViews
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     // RecyclerView Library
-//    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     // Glide Library
 //    implementation 'com.github.bumptech.glide:glide:4.7.1'
