--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,12 @@ dependencies {
     // RecyclerView Library
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    // CARD VIEW
+    implementation "androidx.cardview:cardview:1.0.0"
+
+
     // SHADOW LIBRARY
-    implementation 'com.sdsmdg.harjot:materialshadows:1.2.5'
+//    implementation 'com.sdsmdg.harjot:materialshadows:1.2.5'
 
     // Glide Library
 //    implementation 'com.github.bumptech.glide:glide:4.7.1'
