--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,10 @@ dependencies {
 //    implementation 'com.sdsmdg.harjot:materialshadows:1.2.5'
 
     // Glide Library
-//    implementation 'com.github.bumptech.glide:glide:4.7.1'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
 
     // Dexter Permission Library
 //    implementation 'com.karumi:dexter:5.0.0'
